fix: section starter badge font size too small

--- a/components/SectionStarterBadge/index.scss
+++ b/components/SectionStarterBadge/index.scss
@@ -1,6 +1,7 @@
 .SectionStarterBadge {
   opacity: 0.8;
   border-width: 1px;
+  font-size: 13px;
 
   &:hover {
     border-color: var(--clr-accent);
